# gazetool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dlibgazer.sh.in  gazetool.sh.in
config/: gazeConfigVersion.cmake.in  gazetool.sh.in
data/: CMakeLists.txt  getFaceAlignmentModel.sh
src/: CMakeLists.txt  abstractlearner.cpp  abstractlearner.h  blockingqueue.h  eyelidlearner.h  eyepatcher.h  facedetectionworker.cpp  facedetectionworker.h  faceparts.cpp  featureextractor.cpp  featureextractor.h  gazehyps.cpp  gazehyps.h  gazergui.h  glimageview.cpp  glimageview.h  main.cpp  pupilfinder.cpp  pupilfinder.h  regressionworker.cpp  regressionworker.h  relativeeyelidlearner.cpp  relativegazelearner.cpp  rlssmoother.cpp  shapedetectionworker.cpp  shapedetectionworker.h  verticalgazelearner.cpp  yarpsupport.cpp
src/demo/: CMakeLists.txt  glimageview.cpp
src/lib/: CMakeLists.txt  eyelidlearner.cpp  eyepatcher.cpp  faceparts.h  gazehyps.h  imageprovider.cpp  imageprovider.h  mutualgazelearner.cpp  mutualgazelearner.h  relativeeyelidlearner.h  relativegazelearner.h  rlssmoother.h  verticalgazelearner.h
src/lib/config/: gazeConfig.cmake.in  gazetoolConfig.cmake.in  gazetoolConfigVersion.cmake.in
src/ui/: CMakeLists.txt  gazergui.cpp  gazergui.ui  workerthread.cpp  workerthread.h  yarpsupport.h
src/ui/config/: gazetool.sh.in
