cmake_minimum_required(VERSION 2.8)

PROJECT(gaze)

set(GAZE_MAJOR_VERSION 0)
set(GAZE_MINOR_VERSION 1)
set(GAZE_PATCH_VERSION 0)
set(GAZE_VERSION
  ${GAZE_MAJOR_VERSION}.${GAZE_MINOR_VERSION}.${GAZE_PATCH_VERSION})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGSq} -std=c++11")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

SET(GAZE_CONFIG_DIR "${CMAKE_CURRENT_SOURCE_DIR}/config")

OPTION(ENABLE_YARP_SUPPORT "Enable yarp support" OFF)
OPTION(ENABLE_INSTALL_DLIB_FACE_MODEL "Install the dlib face landmarks model" OFF)
OPTION(ENABLE_QT5 "Build demo (QT5 is required)" ON)

option(USE_AVX_INSTRUCTIONS  "Compile your program with AVX instructions"  OFF)
if(USE_AVX_INSTRUCTIONS)
     add_definitions(-mavx)
endif()

set(CMAKE_AUTOMOC TRUE)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(dlib REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system chrono program_options REQUIRED)

IF (ENABLE_QT5)
    FIND_PACKAGE(Qt5Core REQUIRED)
    FIND_PACKAGE(Qt5Widgets REQUIRED)
    FIND_PACKAGE(Qt5OpenGL REQUIRED)
    FIND_PACKAGE(Qt5Gui REQUIRED)
    ADD_DEFINITIONS(-DENABLE_QT5)
ENDIF()

IF(ENABLE_YARP_SUPPORT)
    FIND_PACKAGE(YARP REQUIRED)
ENDIF()

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${YARP_INCLUDE_DIRS} ${dlib_INCLUDE_DIRS})

#ADD_SUBDIRECTORY(src/lib)

IF (ENABLE_QT5)
    ADD_SUBDIRECTORY(src)
ENDIF()


INSTALL(FILES
    data/gaze_est_deg.dat
    data/lid_est.dat
    data/vertgaze_est_deg.dat
    DESTINATION share/gaze)

IF(ENABLE_INSTALL_DLIB_FACE_MODEL)
    INSTALL(FILES
        data/shape_predictor_68_face_landmarks.dat
        DESTINATION share/gaze)
ENDIF()
